start-microfrontends/k8s/qa/profepa-microfront/profepa-microfront-deployment-qa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modulefederation-profepa-microfront-deployment-qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modulefederation-profepa-microfront-qa
  template:
    metadata:
      labels:
        app: modulefederation-profepa-microfront-qa
    spec:
      containers:
      - name: front-vucem30-container-qa
        image: ghcr.io/vucem30/dockerized-modulefederation-profepa-microfront:1.2.69
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: vucem30registrykey
