start-microfrontends/k8s/qa/profepa-microfront/profepa-microfront-service-qa.yaml
# Expose the deployment using a Service
apiVersion: v1
kind: Service
metadata:
  name: modulefederation-profepa-microfront-service-qa
spec:
  selector:
    app: modulefederation-profepa-microfront-qa
  ports:
    - protocol: TCP
      port: 4220
      targetPort: 80
  type: NodePort
